--- a/layouts/product.html
+++ b/layouts/product.html
@@ -14,7 +14,7 @@
       <div class="card" style="width: 18rem; margin-top: 42px;">
         <div class="card-body">
           <h5 class="card-title">Add Product</h5>
-          <form method="GET" action="/add-product" enctype="multipart/form-data">
+          <form method="POST" action="/add-product" enctype="multipart/form-data">
             <div class="form-group">
               <label for="productName">Name</label>
               <input type="text" class="form-control" id="productName" aria-describedby="productHelp" name="name">
